--- a/flask_new/templates/cart.html
+++ b/flask_new/templates/cart.html
@@ -17,8 +17,8 @@
 							<div class="home_content">
 								<div class="breadcrumbs">
 									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="categories.html">Categories</a></li>
+										<li><a href="/">Home</a></li>
+										<li><a href="categories">Categories</a></li>
 										<li>Shopping Cart</li>
 									</ul>
 								</div>
