--- a/flask_new/templates/categories.html
+++ b/flask_new/templates/categories.html
@@ -50,7 +50,7 @@
                                             <span>Default</span></li>
                                         <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "price" }'>
                                             <span>Price</span></li>
-                                        <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "stars" }'>
+                                        <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "name" }'>
                                             <span>Name</span></li>
                                     </ul>
                                 </li>
@@ -65,135 +65,23 @@
 
                 <div class="product_grid">
 
-                    <!-- Product -->
+                    {% for el in products %}
                     <div class="product">
                         <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_1.jpg') }}" alt=""></div>
-                        <div class="product_extra product_new"><a href="categories.html">New</a></div>
+                                src="{{ el.image }}" alt=""></div>
+{#                        <div class="product_extra product_hot"><a href="categories">Hot</a></div>#}
+{#                        <div class="product_extra product_new"><a href="categories">New</a></div>#}
+{#                        <div class="product_extra product_sale"><a href="categories">Sale</a></div>#}
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$670</div>
+                            <div class="product_title"><a href="/product">{{ el.title }}</a></div>
+                            <div class="product_price">${{ el.price }}</div>
                         </div>
                     </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_2.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Sale</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$520</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_3.jpg') }}" alt=""></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$710</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_4.jpg') }}" alt=""></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product">Smart Phone</a></div>
-                            <div class="product_price">$330</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_5.jpg') }}" alt=""></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$170</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_6.jpg') }}" alt=""></div>
-                        <div class="product_extra product_hot"><a href="categories">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$240</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_7.jpg') }}" alt=""></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product">Smart Phone</a></div>
-                            <div class="product_price">$70</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_8.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$490</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_9.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$410</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_10.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$365</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_11.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$195</div>
-                        </div>
-                    </div>
-
-                    <!-- Product -->
-                    <div class="product">
-                        <div class="product_image"><img
-                                src="{{ url_for('static', filename='images/product_12.jpg') }}" alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Hot</a></div>
-                        <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
-                            <div class="product_price">$580</div>
-                        </div>
-                    </div>
+                    {% endfor %}
 
                 </div>
+
+
                 <div class="product_pagination">
                     <ul>
                         <li class="active"><a href="#">01.</a></li>
@@ -201,6 +89,7 @@
                         <li><a href="#">03.</a></li>
                     </ul>
                 </div>
+
 
             </div>
         </div>
