--- a/flask_new/templates/checkout.html
+++ b/flask_new/templates/checkout.html
@@ -18,8 +18,8 @@
                         <div class="home_content">
                             <div class="breadcrumbs">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="cart.html">Shopping Cart</a></li>
+                                    <li><a href="/">Home</a></li>
+                                    <li><a href="cart">Shopping Cart</a></li>
                                     <li>Checkout</li>
                                 </ul>
                             </div>
