--- a/flask_new/templates/contact.html
+++ b/flask_new/templates/contact.html
@@ -18,7 +18,7 @@
 							<div class="home_content">
 								<div class="breadcrumbs">
 									<ul>
-										<li><a href="index.html">Home</a></li>
+										<li><a href="/">Home</a></li>
 										<li>Contact</li>
 									</ul>
 								</div>
