--- a/flask_new/templates/index.html
+++ b/flask_new/templates/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="avds_small_content">
                     <div class="avds_title">Smart Phones</div>
-                    <div class="avds_link"><a href="categories.html">See More</a></div>
+                    <div class="avds_link"><a href="categories">See More</a></div>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies
                         metus. Sed nec molestie eros. Sed viver ra velit venenatis fermentum luctus.
                     </div>
-                    <div class="avds_link avds_link_large"><a href="categories.html">See More</a></div>
+                    <div class="avds_link avds_link_large"><a href="categories">See More</a></div>
                 </div>
             </div>
         </div>
@@ -155,6 +155,9 @@
                     {% for el in products %}
                     <div class="product">
                         <div class="product_image"><img src="{{ el.image }}" alt=""></div>
+{#                        <div class="product_extra product_hot"><a href="categories">Hot</a></div>#}
+{#                        <div class="product_extra product_new"><a href="categories">New</a></div>#}
+{#                        <div class="product_extra product_sale"><a href="categories">Sale</a></div>#}
                         <div class="product_content">
                             <div class="product_title"><a href="product">{{ el.title }}</a></div>
                             <div class="product_price">${{ el.price }}</div>
@@ -162,84 +165,8 @@
                     </div>
                     {% endfor %}
 
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_1.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_extra product_new"><a href="categories.html">New</a></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_2.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_extra product_sale"><a href="categories.html">Sale</a></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_3.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_4.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_5.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_6.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_extra product_hot"><a href="categories.html">Hot</a></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_7.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
-
-                    <!--						&lt;!&ndash; Product &ndash;&gt;-->
-                    <!--						<div class="product">-->
-                    <!--							<div class="product_image"><img src="{{ url_for('static', filename='images/product_8.jpg') }}" alt=""></div>-->
-                    <!--							<div class="product_extra product_sale"><a href="categories.html">Hot</a></div>-->
-                    <!--							<div class="product_content">-->
-                    <!--								<div class="product_title"><a href="product.html">Smart Phone</a></div>-->
-                    <!--								<div class="product_price">$670</div>-->
-                    <!--							</div>-->
-                    <!--						</div>-->
 
                 </div>
-
             </div>
         </div>
     </div>
@@ -258,7 +185,7 @@
                         <div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a
                             ultricies metus.
                         </div>
-                        <div class="avds_link avds_xl_link"><a href="categories.html">See More</a></div>
+                        <div class="avds_link avds_xl_link"><a href="categories">See More</a></div>
                     </div>
                 </div>
             </div>
