--- a/flask_new/templates/product.html
+++ b/flask_new/templates/product.html
@@ -40,7 +40,7 @@
                 <div class="details_image">
                     <div class="details_image_large"><img src="{{ url_for('static', filename='images/details_1.jpg') }}"
                                                           alt="">
-                        <div class="product_extra product_new"><a href="categories.html">New</a></div>
+                        <div class="product_extra product_new"><a href="categories">New</a></div>
                     </div>
                     <div class="details_image_thumbnails d-flex flex-row align-items-start justify-content-between">
                         <div class="details_image_thumbnail active"
@@ -139,9 +139,9 @@
                     <div class="product">
                         <div class="product_image"><img src="{{ url_for('static', filename='images/product_1.jpg') }}"
                                                         alt=""></div>
-                        <div class="product_extra product_new"><a href="categories.html">New</a></div>
+                        <div class="product_extra product_new"><a href="categories">New</a></div>
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
+                            <div class="product_title"><a href="product">Smart Phone</a></div>
                             <div class="product_price">$670</div>
                         </div>
                     </div>
@@ -150,9 +150,9 @@
                     <div class="product">
                         <div class="product_image"><img src="{{ url_for('static', filename='images/product_2.jpg') }}"
                                                         alt=""></div>
-                        <div class="product_extra product_sale"><a href="categories.html">Sale</a></div>
+                        <div class="product_extra product_sale"><a href="categories">Sale</a></div>
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
+                            <div class="product_title"><a href="product">Smart Phone</a></div>
                             <div class="product_price">$520</div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <div class="product_image"><img src="{{ url_for('static', filename='images/product_3.jpg') }}"
                                                         alt=""></div>
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
+                            <div class="product_title"><a href="product">Smart Phone</a></div>
                             <div class="product_price">$710</div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <div class="product_image"><img src="{{ url_for('static', filename='images/product_4.jpg') }}"
                                                         alt=""></div>
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html">Smart Phone</a></div>
+                            <div class="product_title"><a href="product">Smart Phone</a></div>
                             <div class="product_price">$330</div>
                         </div>
                     </div>
@@ -212,5 +212,5 @@
 
 
 {% block js %}
-<script src="../static/js/custom.js"></script>
+<script src="../static/js/product.js"></script>
 {% endblock %}}
