--- a/flask_new/templates/base.html
+++ b/flask_new/templates/base.html
@@ -40,8 +40,6 @@
                                             {% endfor %}
                                         </ul>
                                     </li>
-                                    <li><a href="/">All products</a></li>
-                                    <li><a href="/">Offers</a></li>
                                     <li><a href="/contact">Contact</a></li>
                                 </ul>
                             </nav>
@@ -132,38 +130,18 @@
                     </form>
                 </div>
                 <ul class="page_menu_nav menu_mm">
-                    <li class="page_menu_item has-children menu_mm">
+                    <li class="page_menu_item menu_mm">
                         <a href="/">Home<i class="fa fa-angle-down"></i></a>
-                        <ul class="page_menu_selection menu_mm">
-                            <li class="page_menu_item menu_mm"><a href="categories">Categories<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="product">Product<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="cart">Cart<i class="fa fa-angle-down"></i></a>
-                            </li>
-                            <li class="page_menu_item menu_mm"><a href="checkout">Checkout<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="contact">Contact<i
-                                    class="fa fa-angle-down"></i></a></li>
-                        </ul>
                     </li>
                     <li class="page_menu_item has-children menu_mm">
-                        <a href="categories">Categories<i class="fa fa-angle-down"></i></a>
+                        <a href="/categories" onclick="return false;">Categories<i class="fa fa-angle-down"></i></a>
                         <ul class="page_menu_selection menu_mm">
-                            <li class="page_menu_item menu_mm"><a href="categories">Category<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="categories">Category<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="categories">Category<i
-                                    class="fa fa-angle-down"></i></a></li>
-                            <li class="page_menu_item menu_mm"><a href="categories">Category<i
-                                    class="fa fa-angle-down"></i></a></li>
+                            {%  for el in categories %}
+                            <li class="page_menu_item menu_mm"><a href="/categories/{{ el }}">{{ el }}</a></li>
+                            {% endfor %}
                         </ul>
                     </li>
-                    <li class="page_menu_item menu_mm"><a href="/">Accessories<i class="fa fa-angle-down"></i></a>
-                    </li>
-                    <li class="page_menu_item menu_mm"><a href="/">Offers<i class="fa fa-angle-down"></i></a></li>
-                    <li class="page_menu_item menu_mm"><a href="contact">Contact<i
+                    <li class="page_menu_item menu_mm"><a href="/contact">Contact<i
                             class="fa fa-angle-down"></i></a></li>
                 </ul>
             </div>
