--- a/flask_new/templates/product.html
+++ b/flask_new/templates/product.html
@@ -38,20 +38,20 @@
             <!-- Product Image -->
             <div class="col-lg-6">
                 <div class="details_image">
-                    <div class="details_image_large"><img src="{{ url_for('static', filename='images/details_1.jpg') }}"
+                    <div class="details_image_large"><img src="../static/images/details_1.jpg"
                                                           alt="">
                         <div class="product_extra product_new"><a href="categories">New</a></div>
                     </div>
                     <div class="details_image_thumbnails d-flex flex-row align-items-start justify-content-between">
                         <div class="details_image_thumbnail active"
-                             data-image="{{ url_for('static', filename='images/details_1.jpg') }}"><img
-                                src="{{ url_for('static', filename='images/details_1.jpg') }}" alt=""></div>
-                        <div class="details_image_thumbnail" data-image="images/details_2.jpg"><img
-                                src="{{ url_for('static', filename='images/details_2.jpg') }}" alt=""></div>
-                        <div class="details_image_thumbnail" data-image="images/details_3.jpg"><img
-                                src="{{ url_for('static', filename='images/details_3.jpg') }}" alt=""></div>
-                        <div class="details_image_thumbnail" data-image="images/details_4.jpg"><img
-                                src="{{ url_for('static', filename='images/details_4.jpg') }}" alt=""></div>
+                             data-image="../static/images/details_1.jpg"><img
+                                src="../static/images/details_1.jpg" alt=""></div>
+                        <div class="details_image_thumbnail" data-image="../static/images/details_2.jpg"><img
+                                src="../static/images/details_2.jpg" alt=""></div>
+                        <div class="details_image_thumbnail" data-image="../static/images/details_3.jpg"><img
+                                src="../static/images/details_3.jpg" alt=""></div>
+                        <div class="details_image_thumbnail" data-image="../static/images/details_4.jpg"><img
+                                src="../static/images/details_4.jpg" alt=""></div>
                     </div>
                 </div>
             </div>
